--- a/src/page/home/home.page.scss
+++ b/src/page/home/home.page.scss
@@ -27,12 +27,11 @@
 }
 
 ion-card {
-  max-width: fit-content;
-  top: 50%;
-  transform: translateY(-50%);
-  max-width: 500px;
-
   @media only screen and (min-width: 768px) {
+    max-width: fit-content;
+    top: 30%;
+    transform: translateY(-30%);
+    max-width: 500px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -40,4 +39,8 @@ ion-card {
 
 ion-card img {
   width: 100%;
+}
+
+ion-item {
+  --background: var(--ion-card-background)
 }
